--- a/11-week11/lab-exercises.ipynb
+++ b/11-week11/lab-exercises.ipynb
@@ -54,6 +54,18 @@
     "    Returns:\n",
     "    float -- The gini impurity score\n",
     "    \"\"\"\n",
+    "    total = sum(len(group) for group in groups)\n",
+    "    for group in groups:\n",
+    "        instances = len(group)\n",
+    "        if instances == 0:\n",
+    "            continue\n",
+    "        \n",
+    "        label_instances = []\n",
+    "        for cat in classes:\n",
+    "            proportion = group.count(cat / size)\n",
+    "\n",
+    "        score += proportion ** 2\n",
+    "    \n",
     "   \n",
     "    gini = 0.0     \n",
     "    return gini\n",
