--- a/8-week8/1_evaluation.ipynb
+++ b/8-week8/1_evaluation.ipynb
@@ -887,9 +887,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation RMSE scores: [0.008822075421977847, 0.008696439577628211, 0.009098433928105254, 0.012449230417903762, 0.006548494441384299]\n",
+      "Mean RMSE: 0.0091\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -937,9 +946,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation neg RMSE scores: [-0.01229902 -0.00627026 -0.01532026 -0.00656946 -0.00864188]\n",
+      "Mean neg RMSE: -0.0098\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -966,9 +984,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fit_time: 0.001 (+/- 0.001)\n",
+      "score_time: 0.004 (+/- 0.010)\n",
+      "test_R2: 0.966 (+/- 0.028)\n",
+      "train_R2: 0.970 (+/- 0.006)\n",
+      "test_RMSE: 0.098 (+/- 0.035)\n",
+      "train_RMSE: 0.094 (+/- 0.009)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from sklearn.metrics import mean_squared_error, r2_score, make_scorer\n",
@@ -1370,7 +1401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1384,7 +1415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
