--- a/11-week11/lab-exercises.ipynb
+++ b/11-week11/lab-exercises.ipynb
@@ -36,9 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4444444444444444"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -55,19 +66,21 @@
     "    float -- The gini impurity score\n",
     "    \"\"\"\n",
     "    total = sum(len(group) for group in groups)\n",
+    "    gini = 0.0 \n",
+    "\n",
     "    for group in groups:\n",
     "        instances = len(group)\n",
     "        if instances == 0:\n",
     "            continue\n",
     "        \n",
-    "        label_instances = []\n",
+    "        score = 0.0\n",
     "        for cat in classes:\n",
-    "            proportion = group.count(cat / size)\n",
+    "            proportion = group.count(cat) / instances\n",
+    "            score += proportion ** 2 # purity\n",
+    "        \n",
+    "        group_impurity = 1 - score\n",
+    "        gini += group_impurity * (instances / total)\n",
     "\n",
-    "        score += proportion ** 2\n",
-    "    \n",
-    "   \n",
-    "    gini = 0.0     \n",
     "    return gini\n",
     "\n",
     "\n",
@@ -109,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +138,7 @@
     "}\n",
     "\n",
     "# Create a DataFrame\n",
-    "df = pd.DataFrame(data)\n"
+    "df = pd.DataFrame(data)"
    ]
   },
   {
@@ -137,17 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Function to calculate Gini impurity\n",
-    "# Here, groups is going to just be a list of \n",
-    "def gini_impurity(groups, classes):\n",
-    "    # IMPLEMENT ME!!!\n",
-    "    gini = None\n",
-    "    return gini\n"
+    "# # Function to calculate Gini impurity\n",
+    "# # Here, groups is going to just be a list of \n",
+    "# def gini_impurity(groups, classes):\n",
+    "#     # IMPLEMENT ME!!!\n",
+    "#     gini = None\n",
+    "#     return gini"
    ]
   },
   {
@@ -159,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +196,7 @@
     "    left_group = df[mask][target].tolist()\n",
     "    right_group = df[~mask][target].tolist()\n",
     "    \n",
-    "    return left_group, right_group\n",
-    "\n"
+    "    return left_group, right_group\n"
    ]
   },
   {
@@ -196,15 +208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([37.5, 50. , 62.5])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
     "# Function to get quartiles for continuous variables\n",
     "def get_quartiles(series):\n",
-    "    return np.percentile(series, [25, 50, 75])\n"
+    "    return np.percentile(series, [25, 50, 75])\n",
+    "get_quartiles([25, 50, 75])"
    ]
   },
   {
@@ -216,11 +238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Function to find the best split given a target column\n",
     "def find_best_split(df,target):\n",
     "    \"\"\"Find the best split in a dataframe\n",
@@ -239,7 +260,7 @@
     "    best_groups = None\n",
     "    \n",
     "    # Try each column except the target\n",
-    "    for column in [c for c in df.columns if c != target]:\n",
+    "    for column in [c for c in df.columns if c != target]: # makes a list of columns that aren't the target\n",
     "        if pd.api.types.is_numeric_dtype(df[column]):\n",
     "            # For numeric columns, try quartile splits\n",
     "            split_candidates = get_quartiles(df[column])\n",
@@ -248,13 +269,20 @@
     "            split_candidates = df[column].unique()\n",
     "            \n",
     "        for value in split_candidates:\n",
-    "            pass\n",
     "            # FILL IN THE CODE HERE\n",
     "            # This code should:\n",
     "            # -- Go through each split candidate\n",
     "            # -- Calculate gini_impurity\n",
     "            # -- If its better than the best known thus far, \n",
     "            # -- Update best_column, best_value, best_gini, and best_groups\n",
+    "            left, right = split_data(df, column, value, target)\n",
+    "            gini = gini_impurity([left, right], class_values)\n",
+    "\n",
+    "            if gini < best_gini:\n",
+    "                best_gini = gini\n",
+    "                best_column = column\n",
+    "                best_value = value\n",
+    "                best_groups = [left, right]\n",
     "    \n",
     "    return {\n",
     "        'column': best_column,\n",
@@ -273,10 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Split: Column Marital Status with value Married gini score = 0.3\n"
+     ]
+    }
+   ],
    "source": [
+    "target = \"Cheat\"\n",
     "best_split = find_best_split(df,target)\n",
     "print('Best Split: Column', best_split['column'], 'with value', best_split['value'], 'gini score =', best_split['gini'])"
    ]
@@ -292,7 +329,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Cheat\"].mode().iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,15 +363,16 @@
     "    min_samples -- Minimum samples required to split\n",
     "    \"\"\"\n",
     "    # If all samples have same class, print the result and stop\n",
-    "    if len(df['Cheat'].unique()) == 1:\n",
-    "        print('    ' * depth + f\"Predict: {df[target].iloc[0]}\")\n",
-    "        return\n",
+    "    if len(df[target].unique()) == 1: # only 1 class\n",
+    "        print('    ' * depth + f\"Predict: {df[target].iloc[0]}\") # '   ' * depth creates the indents\n",
+    "        return # ends the recursion\n",
     "        \n",
     "    # If we hit max depth or min samples, print majority class and stop\n",
+    "    # don't process splits that have a group size less than min_samples\n",
     "    if depth >= max_depth or len(df) < min_samples:\n",
     "        majority_class = df[target].mode().iloc[0]\n",
     "        print('    ' * depth + f\"Predict: {majority_class}\")\n",
-    "        return\n",
+    "        return # ends the recursion\n",
     "        \n",
     "    # Find the best split\n",
     "    split = find_best_split(df,target)\n",
@@ -322,10 +380,11 @@
     "    value = split['value']\n",
     "    \n",
     "    # If we couldn't find a good split, stop here\n",
+    "    # protection\n",
     "    if column is None:\n",
     "        majority_class = df[target].mode().iloc[0]\n",
     "        print('    ' * depth + f\"Predict: {majority_class}\")\n",
-    "        return\n",
+    "        return # end recursion based on the majority class\n",
     "    \n",
     "    # Print this split decision\n",
     "    if pd.api.types.is_numeric_dtype(df[column]):\n",
@@ -335,18 +394,20 @@
     "    \n",
     "    # Split the data\n",
     "    if pd.api.types.is_numeric_dtype(df[column]):\n",
-    "        left_mask = df[column] <= value\n",
+    "        # selection of rows\n",
+    "        left_mask = df[column] <= value # list of T/F\n",
     "    else:\n",
     "        left_mask = df[column] == value\n",
     "        \n",
     "    # Recursively build tree for each split\n",
     "    left_data = df[left_mask]\n",
-    "    right_data = df[~left_mask]\n",
+    "    right_data = df[~left_mask] # not\n",
     "    \n",
     "    # Process left branch\n",
     "    build_tree(left_data, target, depth + 1, max_depth, min_samples)\n",
+    "    # depth + 1 records the next branch's depth\n",
     "    \n",
-    "    # Print the \"else\" for this split\n",
+    "    # Print the \"else\" for this split, the other class\n",
     "    if pd.api.types.is_numeric_dtype(df[column]):\n",
     "        print('    ' * depth + f\"If {column} > {value}:\")\n",
     "    else:\n",
@@ -355,11 +416,65 @@
     "    # Process right branch\n",
     "    build_tree(right_data, target, depth + 1, max_depth, min_samples)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If Marital Status == Married:\n",
+      "    Predict: No\n",
+      "If Marital Status != Married:\n",
+      "    If Refund == Yes:\n",
+      "        Predict: No\n",
+      "    If Refund != Yes:\n",
+      "        If Taxable Income (K) <= 81.25:\n",
+      "            Predict: No\n",
+      "        If Taxable Income (K) > 81.25:\n",
+      "            Predict: Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_tree(df, \"Cheat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If upon <= 0.02:\n",
+      "    If more <= 0.0235:\n",
+      "        If a <= 0.25:\n",
+      "            Predict: Madison\n",
+      "        If a > 0.25:\n",
+      "            Predict: Hamilton\n",
+      "    If more > 0.0235:\n",
+      "        Predict: Madison\n",
+      "If upon > 0.02:\n",
+      "    Predict: Hamilton\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_fedpapers = pd.read_csv(\"/workspaces/student-lecture-materials-jlin119/11-week11/data/federalistpapers.csv\")\n",
+    "df_fedpapers = df_fedpapers[df_fedpapers['author'].isin(['Hamilton', 'Madison'])]\n",
+    "build_tree(df_fedpapers, \"author\", max_depth = 6)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
